--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,7 +1,7 @@
-# TODO: Change the name of the org 
-org: sudkul
-app: serverless-todo-app
-service: serverless-todo-app
+org: hiwot
+app: serverless-todo-app-1
+service: serverless-todo-app-1
+frameworkVersion: '3.23.0'
 
 plugins:
   - serverless-webpack
@@ -10,8 +10,8 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs12.x
-  lambdaHashingVersion: '20201221'
+  runtime: nodejs16.x
+  #lambdaHashingVersion: '20201221'
 
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
