--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
     "serverless-reqvalidator-plugin": "^1.0.4",
     "serverless-webpack": "^5.10.0",
     "ts-loader": "^5.4.5",
-    "typescript": "^4.9.3",
+    "typescript": "~4.6.4",
     "webpack": "^4.46.0"
   },
   "author": "Ivan Mushketyk",
